<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/linearLayout2"
            android:layout_marginTop="8dp" android:layout_marginBottom="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp">
        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/linearLayout">
            <TextView
                    android:text="@string/StrCodigo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/LblCodigo"
                    android:textSize="24sp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/TxtCodigo"
                    app:layout_constraintEnd_toStartOf="@+id/TxtCodigo" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" android:layout_marginEnd="1dp"
            />
            <TextView
                    android:text="TextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/TxtCodigo"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toEndOf="@+id/LblCodigo"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginLeft="3dp"/>
        </android.support.constraint.ConstraintLayout>
        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_marginTop="10dp">

            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/TxtDescricao"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:hint="@string/StrDescricaoProduto" android:capitalize="sentences"/>
        </android.support.constraint.ConstraintLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number|numberDecimal"
                    android:ems="10"
                    android:id="@+id/TxtQuantidade" android:layout_weight="1" android:hint="@string/StrQuantidade"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number|numberDecimal"
                    android:ems="10"
                    android:id="@+id/TxtPreco" android:layout_weight="1"
                    android:hint="@string/StrPreco"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_marginTop="50dp">
            <Button
                    android:text="@string/StrCancelar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/BtnCancelar" android:layout_weight="1"/>
            <Button
                    android:text="@android:string/ok"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/BtnOk" android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>